WanaLyzer/out/numpy/typing/tests/data/fail/linalg.pyi
import numpy as np
import numpy.typing as npt

AR_f8: npt.NDArray[np.float64]
AR_O: npt.NDArray[np.object_]
AR_M: npt.NDArray[np.datetime64]
